--- a/Final Project Working Folder/Final Draft Wroking Version.qmd
+++ b/Final Project Working Folder/Final Draft Wroking Version.qmd
@@ -5,11 +5,15 @@ execute:
   echo: false
   message: false
   warning: false
+header-includes: \usepackage{float}
 ---
 
 ```{R read in packges} 
 #| results: hide
 #| include: false 
+
+library(webshot)
+library(webshot2)
 library(DiagrammeR) 
 library(DiagrammeRsvg) 
 library(rsvg) 
@@ -46,6 +50,28 @@ curran <- curran %>% mutate(momage_tv = momage + occasion * 2)
   # read - primary outcome 
   # anti - measure of anti social behavior - secondary outcome 
 ```
+
+
+# Methods
+
+### Study design and population
+
+<!-- 
+This was a secondary data analysis of a sample of children of female participants from the National Longitudinal Survey of Youth (NLSY).  The NLSY recruited representative samples of the non-institutionalized United States population starting in 1979.  Beginning in 1986, extensive assessments were administered every other year to the children of the original NLSY participants.  Children were eligible for inclusion in this analysis if they were between the ages of 6 and 8 during the first wave of measurement, if they had complete data on measures of interest at the first wave of measurement, and if they were not a sibling of any of the other participants. 
+--> 
+
+This study involved a secondary analysis of data obtained from a subset of children born to female participants in the National Longitudinal Survey of Youth (NLSY). The NLSY commenced its recruitment of representative samples from the non-institutionalized U.S. population in 1979. From 1986 onwards, comprehensive assessments were conducted biennially on the offspring of the original NLSY participants. Inclusion criteria for this analysis required that children be between 6 and 8 years old during the initial measurement wave, possess complete data on relevant measures at that wave, and not be a sibling of any other participants.
+
+### Summary of measures
+
+Our primary outcome was the child's reading ability as measured by the Peabody Individual Achievement Test (PIAT) Reading Recognition subtest. Reading recognition was measured at four time points (every two years over a span of six years). This was a continuous, cluster variant measure. Scores could range in value from zero to 8.4.  Our secondary outcome was antisocial behavior as measured using the Behavior Problems Index (BPI) antisocial behavior six-item subtest completed by mothers of the participants. These six items were summed to compute an overall measure of antisocial behavior, and scores could range in value from zero to 12. Higher scores indicated higher levels of antisocial behavior. This continuous, cluster variant variable was assessed at the same four time points as the primary outcome.
+ 
+The degree of cognitive stimulation provided to the child at home was assessed by mothers using the cognitive stimulation subscale of the HOME-SF. This was a continuous, cluster invariant variable which was only measured at baseline. Scores could range from zero to 14. Emotional support provided to the child was assessed by mothers using the Home Observation for Measurement of the Environment-Short Form (HOME-SF). This was also a continuous, cluster invariant variable which was only measured at baseline. Scores could range in value from zero to 13. Potential confounders included mother's age, child's age and child gender.  Both mother's age and child's age were continuous cluster invariant variables measured at time point 1.  Child's gender was a cluster invariant binary variable.
+
+### Statistical methods 
+
+We employed a Gaussian Generalized Estimating Equation (GEE) model with an identity link and an exchangeable correlation structure to investigate the impact of cognitive stimulation and emotional support on child development. Reading scores and antisocial behavior scores were utilized as proxy measures for distinct facets of child development. Two distinct models were constructed for the primary and secondary outcomes, incorporating a variety of predictors and interaction terms. Candidate models underwent refinement through an ANOVA test utilizing Wald Statistics to discern the significance of predictors, after accounting for variation explained by other considered predictors. The selection and exclusion of model terms were guided by this statistical assessment. All analyses were performed using R version 4.3.1 (2023-06-16).
+
 
 # Results 
 
@@ -103,19 +129,21 @@ This study examined a sample of children of female participants from the Nationa
 
 ### Descriptive Statistics 
 
+A total of 405 children were enrolled in the study.  203 (51%) were male and mean age was 6.92 (SD 0.63) at baseline.  Mean home cognitive stimulation is 8.89 (SD 2.58) and home emotional stimulation was 9.20 (SD 2.31) at baseline and both were similar throughout the visits.  All participants had baseline data recorded.  18 subjects were missing at first follow up, 104 at second follow up and 105 at the third follow up.  It was possible for children to be missing at one time point (after baseline) but be present at a later point in the study. Reading comprehension scores showed substantial change over the 6-year follow-up period @tbl-table-one. The mean reading score at baseline was 2.52 (sd: 0.92). The average reading score jumped to 4.08 (sd: 1.08) at the first follow-up, then increased more gradually at the second and third follow-ups (5.01 (sd:1.16) and 5.77 (sd: 1.25), respectively).  Measures of antisocial behavior remained relatively stable across the follow-up period (@tbl-table-one). Average antisocial behavior score at baseline was 1.66 (sd: 1.66) and only increased to 2.06 (sd: 2.15) by the third follow-up measurement. 
+
 ```{r descriptive stats table one }
 #| results: hide 
 
 CreateTableOne(
   data = curran, 
   strata = "occasion", 
-  vars = c('read', 'anti', 'kidage', 'kidgen', 'momage_tv', 'homecog', 'homeemo'), 
+  vars = c('read', 'anti', 'kidagetv', 'kidgen', 'momage_tv', 'homecog', 'homeemo'), 
   factorVars = c('kidgen'),
   
   includeNA = T, 
   test = F, 
   smd = F, 
-  addOverall = T
+  addOverall = F
   
 ) -> table1
 
@@ -124,40 +152,39 @@ print(table1, smd = TRUE, showAllLevels = F, varLabels = TRUE) -> table1_for_kab
 
 ```
 
+\renewcommand{\arraystretch}{2}
 ```{r pretty version of table one }
 #| label: tbl-table-one
 #| tbl-cap: "Population summary at each follow up time point" 
 
 rownames(table1_for_kable) <- c("N", "Reading Score (SD)", "Antisocial Score (SD)", "Child Age (SD)", "% Male",
-                                "Mom's Age", "Congitive Stimulation (SD)", "Emotional Stimulation (SD)")
+                                "Mom's Age", "Cognitive Stimulation (SD)", "Emotional Stimulation (SD)")
 
 nr <- nrow(table1_for_kable)
 
 table1_for_kable %>% 
   kable(
     linesep = "\\addlinespace", 
-    col.names = c("Overall", "Baseline", "First Follow Up",  "Second Follow Up",  "Third Follow Up"), 
+    col.names = c("Baseline", "First Follow Up",  "Second Follow Up",  "Third Follow Up"), 
     booktabs = T,
-    longtable = TRUE, 
     align = 'c'
     ) %>% 
   kable_styling(
     latex_options = c("striped", "hover", "condensed", "HOLD_position"), 
     font_size = 9
     )  %>% 
-  column_spec(2, bold = T) %>% 
   # pack_rows(group_label = "Outcome Measures", start_row = 1, end_row = 2) %>% 
   # pack_rows(group_label = "Predictors", start_row = 3, end_row = nr) %>% 
-  add_footnote("Cognitive and Emotional Stimulation Scores were recorded at baseline and do not vary with time") 
+  add_footnote("Cognitive and Emotional Stimulation Scores were recorded at baseline and do not vary with time", notation = "number")
   
 
 ```
+\renewcommand{\arraystretch}{1}
 
 <!-- 
-A total of 405 children were enrolled in the study.  711 (51%) were male and mean age was 6.92 (SD 0.63) at baseline.  Mean home cognitive stimulation is 8.89 (SD 2.58) and home emotional stimulation was 9.20 (SD 2.31) at baseline and both were similar throughout the visits.  All participants had baseline data recorded.  18 subjects were missing at first follow up, 104 at second follow up and 105 at the third follow up.  It was possible for children to be missing at one time point (after baseline) but be present at a later point in the study. Reading comprehension scores showed substantial change over the 6-year follow-up period @tbl-table-one. The mean reading score at baseline was 2.52 (sd: 0.92). The average reading score jumped to 4.08 (sd: 1.08) at the first follow-up, then increased. Average scores raised more gradually at the second and third follow-ups (5.01 (sd:1.16) and 5.77 (sd: 1.25), respectively).  Measures of antisocial behavior remained relatively stable across the follow-up period (Table 1).  Average antisocial behavior score at baseline was 1.66 (sd: 1.66) and only increased to 2.06 (sd: 2.15) by the third follow-up measurement. 
+A total of 405 children were enrolled in the study.  203 (51%) were male and mean age was 6.92 (SD 0.63) at baseline.  Mean home cognitive stimulation is 8.89 (SD 2.58) and home emotional stimulation was 9.20 (SD 2.31) at baseline and both were similar throughout the visits.  All participants had baseline data recorded.  18 subjects were missing at first follow up, 104 at second follow up and 105 at the third follow up.  It was possible for children to be missing at one time point (after baseline) but be present at a later point in the study. Reading comprehension scores showed substantial change over the 6-year follow-up period @tbl-table-one. The mean reading score at baseline was 2.52 (sd: 0.92). The average reading score jumped to 4.08 (sd: 1.08) at the first follow-up, then increased. Average scores raised more gradually at the second and third follow-ups (5.01 (sd:1.16) and 5.77 (sd: 1.25), respectively).  Measures of antisocial behavior remained relatively stable across the follow-up period (Table 1).  Average antisocial behavior score at baseline was 1.66 (sd: 1.66) and only increased to 2.06 (sd: 2.15) by the third follow-up measurement. 
 --> 
 
-A total of 405 children were enrolled in the study.  711 (51%) were male and mean age was 6.92 (SD 0.63) at baseline.  Mean home cognitive stimulation is 8.89 (SD 2.58) and home emotional stimulation was 9.20 (SD 2.31) at baseline and both were similar throughout the visits.  All participants had baseline data recorded.  18 subjects were missing at first follow up, 104 at second follow up and 105 at the third follow up.  It was possible for children to be missing at one time point (after baseline) but be present at a later point in the study. Reading comprehension scores showed substantial change over the 6-year follow-up period @tbl-table-one. The mean reading score at baseline was 2.52 (sd: 0.92). The average reading score jumped to 4.08 (sd: 1.08) at the first follow-up, then increased more gradually at the second and third follow-ups (5.01 (sd:1.16) and 5.77 (sd: 1.25), respectively).  Measures of antisocial behavior remained relatively stable across the follow-up period (Table 1).  Average antisocial behavior score at baseline was 1.66 (sd: 1.66) and only increased to 2.06 (sd: 2.15) by the third follow-up measurement. 
 
 ```{r not evaluated plots, eval = F }
 #| label: fig-prim-outliers-plot-2
@@ -305,9 +332,9 @@ Model estimate for interaction of the emotional and cognitive scores at baseline
 REFORMAT TEXT: 
 --> 
 
-@tbl-prim-model-est displays the main and interaction effects of at-home emotional support and cognitive stimulation scores on reading comprehension scores, as well as estimates for other predictors from the Gaussian GEE model with an exchangeable correlation structure. We observed variation in the impact of emotional and cognitive scores at each follow-up timepoint. The effect modification per additional follow-up for cognitive scores was 0.01 (95% CI: 0 to 0.03) after adjusting for other predictors.This indicates that as children aged, the influence of cognitive stimulation on reading scores intensified, albeit not significantly (P=0.16). Comparatively, the role of emotional stimulation escalated more prominently over time, with an effect modification of 0.03 (95% CI: 0.01 to 0.05) after adjusting for other predictors, denoting that the emotional stimulation score amplified with each extra follow-up (P<0.001).
+@tbl-prim-model-est displays the main and interaction effects of at-home emotional support and cognitive stimulation scores on reading comprehension scores, as well as estimates for other predictors from the Gaussian GEE model with an exchangeable correlation structure. We observed variation in the impact of emotional and cognitive scores at each follow-up time point. The effect modification per additional follow-up for cognitive scores was 0.01 (95% CI: 0 to 0.03) after adjusting for other predictors.This indicates that as children aged, the influence of cognitive stimulation on reading scores intensified, albeit not significantly (P=0.16). Comparatively, the role of emotional stimulation escalated more prominently over time, with an effect modification of 0.03 (95% CI: 0.01 to 0.05) after adjusting for other predictors, denoting that the emotional stimulation score amplified with each extra follow-up (P<0.001).
 
-The main effects of emotional and cognitive stimulation quantify the baseline association between these scores and reading proficiency. A one-unit increase in the cognitive score corresponded to a 0.08 (95% CI: -0.01 to 0.18) uptick in reading ability after adjusting for other predictors, hinting at some effect of cognitive scores on literacy skills, though not conclusively (P=0.08). The emotional support score’s baseline impact on reading comprehension was 0.05. Every additional emotional support point yielded a 0.05 (95% CI: -0.03 to 0.13) rise in scores after adjusting for other predictors, an influence not strongly linked to variation in reading outcomes (P=0.24). This suggests other modeled predictors better elucidate reading score variability.  The estimated interaction between emotional and cognitive scores at baseline was 0.00 (95% CI: -0.01 to 0.01) after adjusting for other predictors, offering no evidence that one predictor’s effect changes across levels of the other (P=0.38).
+The main effects of emotional and cognitive stimulation quantify the baseline association between these scores and reading proficiency. We considered and tested interaction between the two effects. A one-unit increase in the cognitive score for an average child with an emotional score of 0 corresponded to a 0.08 (95% CI: -0.01 to 0.18) uptick in reading ability after adjusting for other predictors, hinting at some effect of cognitive scores on literacy skills, though not conclusively (P=0.08). For an average child with cognitive score of 0, the emotional support score's baseline impact on reading comprehension was 0.05. Every additional emotional support point yielded a 0.05 (95% CI: -0.03 to 0.13) rise in scores after adjusting for other predictors and cognitive stimulation score of 0, an influence not strongly linked to variation in reading outcomes (P=0.24). This suggests other modeled predictors better elucidate reading score variability.  The estimated interaction between emotional and cognitive scores at baseline was 0.00 (95% CI: -0.01 to 0.01) after adjusting for other predictors, offering no evidence that one predictor's effect changes across levels of the other (P=0.38).
 
 
 ```{r primary outcome model }
@@ -333,20 +360,26 @@ primary_analysis_model %>% tidy(conf.int = TRUE)  %>%
                 ", ", 
                 round(conf.high, 2), 
                 ")"), 
-    signif = ifelse(p.value <= 0.05, "*", '')
+    signif = ifelse(p.value <= 0.05, "--", '')
   )  %>% 
   select(term_new, estimate, ci, p.value, signif) %>% 
   kable(digits = 2, 
         linesep = "\\addlinespace", 
-        align = c('l', 'c', 'c', 'c'), 
+        align = c('l', 'c', 'c', 'c', 'c'), 
         col.names = c("Model Term", "Estimate", "95% CI", "P-value", "Significance"), 
         booktabs = T) %>% 
   kable_styling(
     latex_options = c("striped", "hover", "condensed", "HOLD_position")
     ) %>% 
-  add_footnote("Terms with '*' denote interactions") %>% 
-  add_footnote("Cog. Score = Cognitive Stimulation at Home Score") %>% 
-  add_footnote("Emo. Score = Emotional Stimulation at Home Score")
+  footnote(symbol = c("Terms with '*' denote interactions", 
+                      "Cog. Score = Cognitive Stimulation at Home Score", 
+                      "Emo. Score = Emotional Support at Home Score", 
+                      "Terms with '--' donete statistically significant predictors"))
+# 
+#   add_footnote("Terms with '*' denote interactions", notation = "Footnote Symbol 2") %>% 
+#   add_footnote("Cog. Score = Cognitive Stimulation at Home Score", notation = "Footnote Symbol 2") %>% 
+#   add_footnote("Emo. Score = Emotional Support at Home Score", notation = "Footnote Symbol 2") %>% 
+#   add_footnote("Terms with '--' denote statistically significant predictors", notation = "Footnote Symbol 2")
 
 ```
 <!-- 
@@ -362,36 +395,20 @@ that as children grow older from ages between six and eight into early teenage y
 additional follow up point.  
 
 REWORK: 
---> 
+ 
 
-Reading score variability was largely explained by the follow-up period and child age at baseline. On average, reading scores rose by 2.03 (95% CI: 1.55 to 2.50) points per follow-up interval after adjusting for other predictors, affirming that literacy skills saw a statistically significant improvement with age over time (P<0.001). Additionally, older children initially showed markedly higher reading achievement (P<0.001). An extra baseline year corresponded with a 0.80 (95% CI: 0.67 to 0.93) incraese in score, after adjusting for other predictors. 
+Reading cognition scores were strongly associated with age at baseline. On average, reading scores rose by 2.03 (95% CI: 1.55 to 2.50) points per follow-up interval after adjusting for other predictors, affirming that literacy skills saw a statistically significant improvement with age over time (P<0.001). Additionally, older children initially showed markedly higher reading achievement (P<0.001). An extra baseline year corresponded with a 0.80 (95% CI: 0.67 to 0.93) higher score at baseline, after adjusting for other predictors. 
 
-<!-- 
-However, the influence of age waned at each successive follow-up. We estimate a 0.19 (95% CI: -0.25 to -0.12) decrease in the age effect at every additional follow-up, denoting strong evidence (P<0.001) that initial reading score differences across ages 6 to 8 years vanished in later assessments during early adolescence. This pattern is visually evident in @fig-prim-outliers-plot-2, which exhibits narrowed reading score dispersion at subsequent time points.
+REWORK 2: 
+-->
 
-We further investigate main and interaction effects of age, time, emotional, and cognitive scores using regression effect plots. 
-@fig-effect-time-by-age compares estimated reading scores over time for children with varying baseline age. We select values 
-based on study inclusion criteria, and present learning effect curves obtained using Gaussuan GEE with exchangeable correlation structure. It is evident that the greatest difference in the average reading scores is observed at baseline, and the youngest 
-children have the largest average learning rate, or the largest increase in reading scores. By the time of the third follow up point, which took place 6 years after the baseline measurements, children of all starting ages seem to have more similar 
-average reading scores. 
-
---> 
-<!-- 
-
-Removed - voted out by the group 
-
-
-However, the influence of age diminished at each successive follow-up. We estimate a 0.19 (95% CI: -0.25 to -0.12) decrease in the age effect at every additional follow-up  after adjusting for other predictors, denoting strong evidence (P<0.001) that initial reading score differences across ages 6 to 8 years vanished in later assessments during early adolescence. 
-
---> 
-
-We further investigated the main and interaction effects of age, time, emotional, and cognitive scores using regression effect plots. @fig-effect-time-by-age presents estimated reading score trajectories over time for children of varying baseline ages, selected per study inclusion criteria. The greatest difference in mean reading scores occurs at baseline, with the youngest children displaying the steepest growth in reading skills on average. By the third follow-up, children across all starting ages converge to more similar average reading score levels.
+We further investigated the main and interaction effects of age, time, emotional, and cognitive scores using regression effect plots. @fig-effect-time-by-age presents estimated reading score trajectories over time for children of varying baseline ages, selected per study inclusion criteria. The greatest difference in mean reading scores occurs at baseline (p-value associated with Age <0.001), with the youngest children displaying the steepest growth in reading skills on average (p-value associated with age-time interaction <0.001). By the third follow-up, children across all starting ages converge to more similar average reading score levels, as shown by visualized marginal effects of the model.
 
 ```{r main effect of time via age on reading score}
 #| label: fig-effect-time-by-age
-#| fig-cap: "Estiamted Trajectories in Reading Scores Over time"
-#| fig-height: 5
-#| fig-width: 7
+#| fig-cap: "Estimated Trajectories in Reading Scores Over time"
+#| fig-height: 3.5
+#| fig-width: 6
 #| 
 # main effect main model for interactions 
 
@@ -402,11 +419,11 @@ plot_model(model = primary_analysis_model,
            terms = c("occasion", "kidage [6, 7, 8]")) + 
   theme_minimal() + 
   labs(x = "Follow Up Period", 
-       y = "Reading Score", 
+       y = "Estiamted Reading Score", 
        color = "Child's Age at Baseline") + 
   theme(legend.position = "bottom", 
         legend.text = element_text(size = 8)) + 
-  ggtitle("Effect of Time on Reading Scores")
+  ggtitle("Effect of Time and Baseline Age on Reading Scores")
 ```
 
 ```{r not evaluated - numbers for text}
@@ -513,9 +530,20 @@ grid.arrange(p_left, p_right, nrow = 1)
 
 ```
 
-### Secondary analysis- Antisocial behavior
+### Secondary analysis: Antisocial behavior
 
-As a secondary outcome, we assessed the impact of emotional support and cognitive stimulation at home at baseline using Gaussian GEE model with exchangeable correlation structure. The results are presented in @tbl-sec-model-est. We have found no evidence that change in emotional support scores (P = 0.58) or, cognitive stimulation (P=0.89) isare statistically related to change in the antisocial behavior scores. Additionally, there is no evidence that the effect of cognitive scores varies at different levels of emotional scores (P = 0.36), and vice versa.
+As a secondary outcome, we assessed the impact of emotional support and cognitive stimulation at home on antisocial behavior at baseline using Gaussian GEE model with exchangeable correlation structure. The results are presented in @tbl-sec-model-est. We have found no evidence that emotional support (P = 0.58) or cognitive stimulation (P=0.89) scores are statistically related to change in the antisocial behavior scores. Additionally, there is no evidence that the effect of cognitive scores varies at different levels of emotional scores (P = 0.36), and vice versa.
+
+
+<!--
+Antisocial behavior scores are a measure on the scale from 0 to 10, with 0 representing the lowest possible score. 
+We found that one unit increase in the emotional stimulation score was associated with an expected decrease of antisocial 
+score by 0.06 point (-0.28 to 015 95% confidence interval), after adjusting for other predictors. We estimate that one unit increase in cognitive scores resulted in 0.02 points (-0.21 to 0.24 95% confidence interval) increase in antisocial scores, after adjusting for other variables. Both estimates show a weak effect of two predictors on the antisocial score, with no statistical evidence of strong association. 
+
+--> 
+
+@tbl-sec-model-est presents other predictors that have stronger effects that help explain variability in the antisocial scores. 
+Similar to the reading score analysis, follow-up time period, age of a child at baseline and their interaction were strong predictors of antisocial behavior change and development. @fig-effect-time-by-age-sec presents marginal effects of follow up times on antisocial scores for children with varying baseline ages. It appears that, on average, younger children had lower baseline antisocial scores, which grew at a steeper rate over the course of six years. In contrast, the oldest children at baseline had approximately 25% higher antisocial scores, which did not change greatly over time.
 
 ```{r secondary outcome model }
 #| label: tbl-sec-model-est
@@ -539,32 +567,24 @@ secondary_analysis_model %>% tidy(conf.int = TRUE)  %>%
                 ", ", 
                 round(conf.high, 2), 
                 ")"), 
-    signif = ifelse(p.value <= 0.05, "*", '')
+    signif = ifelse(p.value <= 0.05, "--", '')
   )  %>% 
   select(term_new, estimate, ci, p.value, signif) %>% 
   kable(digits = 2, 
         linesep = "\\addlinespace", 
-        align = c('l', 'c', 'c', 'c'), 
+        align = c('l', 'c', 'c', 'c', 'c'), 
         col.names = c("Model Term", "Estimate", "95% CI", "P-value", "Significance"), 
         booktabs = T) %>%
   kable_styling(
     latex_options = c("striped", "hover", "condensed", "HOLD_position")
-    ) %>% 
-  add_footnote("Terms with '*' denote interactions") %>% 
-  add_footnote("Cog. Score = Cognitive Stimulation at Home Score") %>% 
-  add_footnote("Emo. Score = Emotional Stimulation at Home Score")
+    )  %>% 
+  footnote(symbol = c("Terms with '*' denote interactions", 
+                      "Cog. Score = Cognitive Stimulation at Home Score", 
+                      "Emo. Score = Emotional Support at Home Score", 
+                      "Terms with '--' donete statistically significant predictors"))
 
 ```
 
-<!--
-Antisocial behavior scores are a measure on the scale from 0 to 10, with 0 representing the lowest possible score. 
-We found that one unit increase in the emotional stimulation score was associated with an expected decrease of antisocial 
-score by 0.06 point (-0.28 to 015 95% confidence interval), after adjusting for other predictors. We estimate that one unit increase in cognitive scores resulted in 0.02 points (-0.21 to 0.24 95% confidence interval) increase in antisocial scores, after adjusting for other variables. Both estimates show a weak effect of two predictors on the antisocial score, with no statistical evidence of strong association. 
-
---> 
-
-@tbl-sec-model-est presents other predictors that have stronger effects that help explain variability in the antisocial scores. 
-Similar to the reading score analysis, follow-up time period, age of a child at baseline and their interaction were strong predictors of antisocial behavior change and development. @fig-effect-time-by-age-sec presents marginal effects of follow up times on antisocial scores for children with varying baseline ages. It appears that, on average, younger children had lower baseline antisocial scores, which grew at a steeper rate over the course of six years. In contrast, the oldest children at baseline had approximately 25% higher antisocial scores, which did not change greatly over time.
 
 ```{r non evaluated calculator for slopes }
 #| eval: false 
@@ -612,8 +632,8 @@ curran %>%
 ```
 
 ```{r}
-#| fig-height: 5
-#| fig-width: 7
+#| fig-height: 3.5
+#| fig-width: 6
 #| label: fig-effect-time-by-age-sec
 #| fig-cap: "Estimated Antisocial Score Trajectories."
 #| 
@@ -626,32 +646,34 @@ plot_model(model = secondary_analysis_model,
            terms = c("occasion", "kidage [6, 7, 8]")) + 
   theme_minimal() + 
   labs(x = "Follow Up Period", 
-       y = "Antisocial Score", 
+       y = "Estimated Antisocial Score", 
        color = "Child's Age at Baseline") + 
-  theme(legend.position = "bottom", 
+  theme(# legend.position = "bottom", 
         legend.text = element_text(size = 8)) + 
-  ggtitle("Effect of Time on Antisocial Scores")
+  ggtitle("Effect of Time and Baseline Age on Antisocial Scores")
 ```
 
-We also found an important effect of sex on the antisocial scores. During the model building and variable selection process we did not find significant interactions between sex and other predictors of antisocial scores. We estimated the marginal effect of sex for males at 0.86 (95% CI: 0.58 to 1.14) compared to females, after adjusting for other factors. This factor has no interaction with other predictors, we estimated constant differences between males and females in terms of their respective antisocial scores at all time points, while accounting for other variables. There is strong statistical evidence (P <0.001) that the average antisocial behavior score for males was at all times 0.86 points higher when compared to females.
+We also found an important effect of sex on the antisocial scores. We estimated the marginal effect of sex for males at 0.86 (95% CI: 0.58 to 1.14) compared to females, after adjusting for other factors. This factor has no statistically significant interactions with other predictors, we estimated constant differences between males and females in terms of their respective antisocial scores at all time points, while accounting for other variables. There is strong statistical evidence (P <0.001) that the average antisocial behavior score for males was at all times 0.86 points higher when compared to females.
 
 # Discussion 
 
-<!-- 
+Overall, cognitive stimulation, emotional support, and the interaction between the two had very small, and largely statistically insignificant, effects on reading comprehension scores.   Unsurprisingly, the strongest predictors of reading scores were age (children who were older at baseline had better reading comprehension) and time (childcare's reading performance improved at later follow-up points). 
 
-# main effects discussion 
+According to estimates derived from our model, the average reading scores for children of all ages appear to converge to approximately the same level by the third follow-up time point. Notably, children who were six and eight years old at baseline would be twelve and fourteen years old, respectively, at this third follow-up point. The diminishing differences observed may suggest a reduction in the learning effect, with the majority of learning occurring during the earlier stages of the developmental process.
 
-@fig-main-effects-by-age shows interactions between stimulation scores and reading skill growth rates over time. We chose sample $25^{th}$, $50^{th}$, and $75^{th}$ quantiles of cognitive and emotional stimulation scores to display the effect of baseline scores on learning rates.
+It is important to reference the visualization provided by @fig-effect-time-by-age, which illustrates the average change in reading scores over time for children at different ages. By visually comparing the estimates at follow-up 2 for children aged eight years old at baseline and follow-up 3 for children aged six at baseline, we note that the ages of children in these two groups align at these respective follow-up points. Furthermore, the estimated average reading scores align as well. 
 
-For an average child with a baseline cognitive score at the $25^{th}$ percentile (score of 7), the expected two-year change in reading scores was 2.11 (95% CI 1.63 to 2.59). In comparison, the rate of change for an average child with a baseline score of 9 was 2.13 (95% CI 1.65 to 2.62). An average child with a cognitive score of 11 had an average reading score change of 2.15 (95% CI 1.66 to 2.65). All estimates are marginal effects after adjusting for other variables. These results suggest that higher cognitive stimulation at baseline may improve children reading skill development rates, though more research and data are needed to make definitive conclusions.
+This insight suggests that while the estimated learning rates may differ for varying ages, the average reading ability at a given age appears to be consistent. This observation underscores the importance of considering both the developmental trajectory and age-related variations when interpreting the dynamics of learning effects on reading scores. This analysis is prone to limitations, which are addressed later. 
 
-Similarly, we adjust the effect of time on reading scores using $25^{th}$, $50^{th}$, and $75^{th}$ percentiles of emotional scores in the study population. the marginal effect of one additional follow up period on reading literacy for a child with a baseline emotional stimulation score of 8 is 2.25, bounded by the (1.8 to 2.71) 95% confidence interval. 
-The rate of reading scores change for children with emotional scores of 10 and 12 are 2.31 and 2.37, bounded by (1.86 to 2.77) and (1.91) to (2.83) respectively. All estimates are marginal and summarize the data while adjusting for other predictors in the model. 
+Moreover, our analysis revealed no statistically significant effect of the considered stimulation and support measures on the antisocial behavior of a child. In the realm of social relationships, the quest remains to identify interventions that consistently diminish these scores. Although we observed, on average, higher scores among males, our ability to elucidate the underlying reasons for this gender-based difference is constrained by the available data alone.
 
+To comprehensively contextualize these findings within the broader landscape of child development and propose actionable strategies, further scrutiny of existing research and acknowledgment of established methodologies are imperative. A more nuanced understanding of the multi factorial nature of antisocial behavior, including potential gender-specific patterns, will be instrumental in guiding the development of effective interventions aimed at fostering positive social outcomes for children.
 
-# antisocial scores discussion 
+This study is subject to several potential limitations that may impact the robustness of our findings. Notably, cognitive stimulation and emotional support, integral variables in our analysis, relied on self-reports from parents. This introduces the possibility of measurement error, and the likelihood of this error being differential raises concerns. In other words, the accuracy of reporting cognitive stimulation and emotional support may have varied based on the child's reading ability. The presence of such differential measurement error has the potential to introduce bias in our results, making it challenging to ascertain its specific impact.
 
+A more accurate evaluation of these variables could have been achieved through assessments conducted by well-trained study staff. The dataset's limitations, including its scope and the potential for substantial unmeasured confounding, further contribute to the complexity of interpreting our findings. The extent to which these limitations may have influenced our results remains unclear.
 
-In particular, for children aged 6 years old at baseline, the average change in antisocial scores at each additional follow up time was 0.26, bounded by (0.12 to 0.39 95% confidence interval). For children aged 7 years old, similar average change was smaller, estimated at 0.12 units change, bounded by the (0.04 to 0.19) confidence interval. For children who were 8 years old at baseline the average change was a slight decrease in antisocial scores, estimated at -0.02, bounded by (-0.15 to 0.11). This effect was close to zero, which is evident on @fig-effect-time-by-age-sec. All marginal effects are estimated after adjusting for other predictors. 
+Furthermore, it is crucial to recognize that learning is a multifaceted and continuous process requiring sustained effort and attention over time. While we assessed baseline emotional support and cognitive stimulation scores, our dataset lacks information describing the persistence of these interventions over time. The absence of statistical evidence leaves room for speculation that a more dynamic monitoring approach may unveil stronger associations. In a prospective study, considering lagged effects of cognitive and emotional scores could provide insights into how stimulation and support at a given point in time influence reading and antisocial scores after six months or a year, for instance.
 
---> 
+The developmental trajectory of reading skills significantly shapes a child's future, empowering them with the necessary tools for growth and development. Consequently, future studies in this domain are vital, especially those focusing on optimal and dynamic treatment strategies to enhance our understanding of these complex associations.
+
